# 1c-mini-orchestrator

./: NOTICE  README.md  pyproject.toml
hooks/: README.md  auto-capture.ps1  bash-guard.ps1  context-guard.ps1  context-monitor.ps1  dispatch-inbox.ps1  dispatch-tool-log.ps1  handoff-write-guard.ps1  mcp-stats.ps1  periodic-flush.ps1  post-compact-restore.ps1  post-phase-validate.ps1  pre-compact.ps1  rlm-health-gate.ps1  session-end-hygiene.ps1  session-end-save.ps1  session-start-restore.ps1  stop-autonomous-chain.ps1  stop-rotate.ps1  subagent-stop-verify.ps1
hooks/lib/: handoff-state.ps1  handoff-validator.ps1  rlm-client.ps1  session-status.ps1
